--- a/B5 Assignment Box Model/css/box-model.css
+++ b/B5 Assignment Box Model/css/box-model.css
@@ -20,8 +20,8 @@ h1, h2, h3 {
   }
 
 ul > li {
-   background-color: rgb(231,76,48),overflow: hidden; /* Cinnabar */ font-family: 'Titillium Web', cursive;
-   color: white; list-style-type:square;
+   background-color: rgb(231,76,48); /* Cinnabar */ font-family: 'Titillium Web', cursive;
+   color: white; list-style-type:square; overflow: hidden;
 }
 
 h1 {
