--- a/B5 Assignment Box Model/css/box-model.css
+++ b/B5 Assignment Box Model/css/box-model.css
@@ -83,27 +83,27 @@ p {
    overflow: hidden;
   }
  
- #nav-bar ul {
+#nav ul {
     float : left;
     list-style : none;
     margin : 0;
     padding : 0;
 }
-#nav-bar ul li {
+#nav ul li {
     display : inline;
 }
-#nav-bar ul li a {
+#nav ul li a {
     display: inline;
     float : left;
     padding : 0 10px;
     color : #EDEDED;
     text-decoration : none;
 }
-#nav-bar ul li a:hover {
-    color : #AAAAAA;
+#nav ul li a:hover {
+    color :green;
 }
-#nav-bar ul li#selected a {   /* this changes color of the menu item of current page */
-    color : #AAAAAA;
+#nav ul li#selected a {   /* this changes color of the menu item of current page */
+    color : yellow;
 }
  
  
